[tool.poetry]
name = "mlflow-mpu"
version = "0.1.0"
description = ""
authors = ["harupy <hkawamura0130@gmail.com>"]
readme = "README.md"
packages = [{include = "mlflow_mpu"}]

[tool.poetry.dependencies]
python = ">=3.8"
fastapi = "^0.100.1"
boto3 = "^1.28.19"
pydantic = "^2.1.1"
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.282"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = [
  "E",
  "F",
  "I",
]